# ipfs-tagesschau

./: .gitignore  README.md  download_tagesschau.sh  pyproject.toml
ipfs_tagesschau/: config.py  io.py  parse.py  render.py  schema.py  scrape.py
ipfs_tagesschau/templates/: article.html  index.html  template.html
scripts/: scrape_feed.py
tests/: test_ipfs_tagesschau.py
